# markable

./: CMakeLists.txt  README.adoc  README.md  documentation.md  markable.hpp  test_markable.cpp
documentation/: overview.adoc  overview.md  rationale.md  reference.adoc  reference.md  revisions.adoc
include/: markable.hpp
include/ak_toolkit/: markable.hpp
test/: test_markable.cpp
